--- a/pilotwire/platformio.ini
+++ b/pilotwire/platformio.ini
@@ -8,22 +8,25 @@
 ; http://docs.platformio.org/en/stable/projectconf.html
 
 [platformio]
+description = Provide ESP8266 based devices with Web, MQTT and OTA firmware
 src_dir = tasmota
 build_dir = .pioenvs
+workspace_dir = .pioenvs
 build_cache_dir = .cache
 extra_configs = platformio_tasmota_env.ini
                 platformio_override.ini
 
 ; *** Build/upload environment
-default_envs = 
+default_envs =
 ; *** Uncomment by deleting ";" in the line(s) below to select version(s)
                 tasmota
-;                tasmota-ircustom     ; alternative to 'tasmota' with full IR protocols activated, you will need to disable some features to keep code not too big
+;                tasmota-ircustom
 ;                tasmota-minimal
 ;                tasmota-lite
 ;                tasmota-knx
 ;                tasmota-sensors
 ;                tasmota-display
+;                tasmota-zbbridge
 ;                tasmota-ir
 ;                tasmota-BG
 ;                tasmota-BR
@@ -40,6 +43,7 @@ default_envs =
 ;                tasmota-NL
 ;                tasmota-PL
 ;                tasmota-PT
+;                tasmota-RO
 ;                tasmota-RU
 ;                tasmota-SE
 ;                tasmota-SK
@@ -56,24 +60,15 @@ default_envs =
 framework                 = arduino
 board                     = esp01_1m
 board_build.flash_mode    = dout
+board_build.ldscript      = eagle.flash.1m.ld
 
-platform                  = ${core_active.platform}
-platform_packages         = ${core_active.platform_packages}
-build_flags               = ${core_active.build_flags}
-
-
-; *********************************************************************
-; *** Uncomment, by deleting ";" in line below, to use custom settings from file user_config_override.h 
-;                            -DUSE_CONFIG_OVERRIDE
-;
-; *** alternatively can be done in: platformio_override.ini
-; *** See example: platformio_override_sample.ini
-; *********************************************************************
-
-; *** Fix espressif8266@1.7.0 induced undesired all warnings
-build_unflags             = -Wall
+platform                  = ${core.platform}
+platform_packages         = ${core.platform_packages}
+build_unflags             = ${core.build_unflags}
+build_flags               = ${core.build_flags}
 
 board_build.f_cpu         = 80000000L
+board_build.f_flash       = 40000000L
 monitor_speed             = 115200
 upload_speed              = 115200
 ; *** Upload Serial reset method for Wemos and NodeMCU
@@ -84,30 +79,52 @@ extra_scripts             = ${scripts_defaults.extra_scripts}
 [scripts_defaults]
 extra_scripts             = pio/strip-floats.py
                             pio/name-firmware.py
+                            pio/gzip-firmware.py
+                            pio/override_copy.py
+
+[esp_defaults]
+; *** Fix espressif8266@1.7.0 induced undesired all warnings
+build_unflags             = -Wall
+build_flags               = -D_IR_ENABLE_DEFAULT_=false
+                            -DDECODE_HASH=true -DDECODE_NEC=true -DSEND_NEC=true
+                            -DDECODE_RC5=true -DSEND_RC5=true -DDECODE_RC6=true -DSEND_RC6=true
+; new mechanism to set the IRremoteESP8266 supported protocols: none except HASH, NEC, RC5, RC6
+; *********************************************************************
+; *** Use custom settings from file user_config_override.h
+                            -DUSE_CONFIG_OVERRIDE
+; *********************************************************************
+
 
 [esp82xx_defaults]
-build_flags               = -D NDEBUG
-                            -mtarget-align
+build_flags               = ${esp_defaults.build_flags}
                             -Wl,-Map,firmware.map
-
-[core_active]
-platform                  = ${core_2_6_1.platform}
-platform_packages         = ${core_2_6_1.platform_packages}
-build_flags               = ${core_2_6_1.build_flags}
-
-[core_2_6_1]
-; *** Esp8266 core for Arduino version 2.6.1
-platform                  = espressif8266@2.3.0
-platform_packages         =
-build_flags               = ${esp82xx_defaults.build_flags}
-                            -Wl,-Teagle.flash.1m.ld
+                            -D NDEBUG
+                            -mtarget-align
+                            -DFP_IN_IROM
                             -DBEARSSL_SSL_BASIC
-; NONOSDK22x_190703 = 2.2.2-dev(38a443e)
+                            ; NONOSDK22x_190703 = 2.2.2-dev(38a443e)
                             -DPIO_FRAMEWORK_ARDUINO_ESPRESSIF_SDK22x_190703
-; lwIP 2 - Higher Bandwidth no Features
+                            ; lwIP 2 - Higher Bandwidth no Features
                             -DPIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH_LOW_FLASH
-; VTABLES in Flash
+                            ; VTABLES in Flash
                             -DVTABLES_IN_FLASH
-; No exception code in firmware
+                            ; No exception code in firmware
                             -fno-exceptions
-                            -lstdc++
+                            -lstdc++                            
+                            ; the following removes the 4-bytes alignment for PSTR()
+                            -DPSTR_ALIGN=1
+                            ; restrict to minimal mime-types
+                            -DMIMETYPE_MINIMAL
+
+[irremoteesp_full]
+build_flags               = -DUSE_IR_REMOTE_FULL
+                            -U_IR_ENABLE_DEFAULT_
+                            -DDECODE_PRONTO=false -DSEND_PRONTO=false
+
+
+[core]
+; *** Esp8266 Tasmota modified Arduino core based on core 2.7.2
+platform                  = espressif8266@2.5.1
+platform_packages         = framework-arduinoespressif8266 @ https://github.com/tasmota/Arduino/releases/download/2.7.2.1/esp8266-2.7.2.1.zip
+build_unflags             = ${esp_defaults.build_unflags}
+build_flags               = ${esp82xx_defaults.build_flags}
