--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -8,17 +8,26 @@
 ; Please visit documentation for the options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
-[env:tasmota32]
-board                  = esp32_4M1M
+[env:teleinfo]
 
-[env:tasmota-littlefs]
+[env:teleinfo-1m128k]
+build_flags            = ${common.build_flags} -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE
+board                  = esp8266_1M
+board_build.ldscript   = eagle.flash.1m128.ld
+board_build.filesystem = littlefs
+
+[env:teleinfo-4m2m]
 build_flags            = ${common.build_flags} -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE
 board                  = esp8266_4M2M
-board_build.filesystem = littlefs
 board_build.ldscript   = eagle.flash.4m2m.ld
+board_build.filesystem = littlefs
 
-[core32]
+[env:teleinfo32]
+extends                = env:tasmota32 
+build_flags            = ${common32.build_flags} -DFIRMWARE_TASMOTA32 -DUSE_ETHERNET
 platform               = espressif32 @ 3.3.1
+board_build.partitions = esp32_partition_app1441k_spiffs1245.csv
+board_build.filesystem = littlefs
 
 [platformio]
 ; For best Gitpod performance remove the ";" in the next line. Needed Platformio files are cached and installed at first run
@@ -29,8 +38,11 @@ extra_configs = platformio_tasmota_cenv.ini
 ; *** Build/upload environment
 default_envs =
 ; *** Uncomment the line(s) below to select version(s)
-                tasmota
-                tasmota-littlefs
+                teleinfo
+                teleinfo-1m128k
+                teleinfo-4m2m
+                teleinfo32
+;                tasmota
 ;                tasmota-debug
 ;                tasmota-ircustom
 ;                tasmota-minimal
@@ -40,7 +52,7 @@ default_envs =
 ;                tasmota-display
 ;                tasmota-zbbridge
 ;                tasmota-ir
-                tasmota32
+;                tasmota32
 ;                tasmota32-bluetooth
 ;                tasmota32-webcam
 ;                tasmota32-knx
