--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -10,21 +10,21 @@
 
 [env:teleinfo]
 
-[env:teleinfo-1m128k]
-build_flags            = ${common.build_flags} -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE
-board                  = esp8266_1M
-board_build.ldscript   = eagle.flash.1m128.ld
-board_build.filesystem = littlefs
-
 [env:teleinfo-4m2m]
-build_flags            = ${common.build_flags} -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE
+build_flags            = ${common.build_flags}  -DBUILD_4M2M -DUSE_FTPSERVER 
 board                  = esp8266_4M2M
 board_build.ldscript   = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
 
+[env:teleinfo-16m14m]
+build_flags            = ${common.build_flags} -DBUILD_16M14M -DUSE_FTPSERVER 
+board                  = esp8266_16M14M
+board_build.ldscript   = eagle.flash.16m14m.ld
+board_build.filesystem = littlefs
+
 [env:teleinfo32]
 extends                = env:tasmota32 
-build_flags            = ${common32.build_flags} -DFIRMWARE_TASMOTA32 -DUSE_ETHERNET
+build_flags            = ${common32.build_flags} -DBUILD_ESP32_4M -DFIRMWARE_TASMOTA32 -DUSE_ETHERNET -DUSE_FTPSERVER
 platform               = espressif32 @ 3.3.1
 board_build.partitions = esp32_partition_app1441k_spiffs1245.csv
 board_build.filesystem = littlefs
@@ -39,8 +39,8 @@ extra_configs = platformio_tasmota_cenv.ini
 default_envs =
 ; *** Uncomment the line(s) below to select version(s)
                 teleinfo
-                teleinfo-1m128k
                 teleinfo-4m2m
+                teleinfo-16m14m
                 teleinfo32
 ;                tasmota
 ;                tasmota-debug
