--- a/offload-pilotwire/platformio_override.ini
+++ b/offload-pilotwire/platformio_override.ini
@@ -10,38 +10,60 @@
 
 ; default offload for plugs with 1M esp8266
 [env:offload]
-build_flags            = ${common.build_flags} -DUSE_OFFLOAD_WEB
+build_flags             = ${common.build_flags} -DUSE_OFFLOAD_WEB -DUSE_SENSOR
+
+; offload with 64k LittleFS partition for plugs with 1M esp8266
+[env:offload-1m64k]
+build_flags             = ${common.build_flags} -DUSE_OFFLOAD_WEB -DUSE_SENSOR -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE -DBUILD_1M64K
+board                   = esp8266_1M
+board_build.ldscript    = eagle.flash.1m64.ld
+board_build.filesystem  = littlefs
 
 ; offload with 128k LittleFS partition for plugs with 1M esp8266
 [env:offload-1m128k]
-build_flags            = ${common.build_flags} -DUSE_OFFLOAD_WEB -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE
-board                  = esp8266_1M
-board_build.ldscript   = eagle.flash.1m128.ld
-board_build.filesystem = littlefs
+build_flags             = ${common.build_flags} -DUSE_OFFLOAD_WEB -DUSE_SENSOR -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE -DBUILD_1M128K
+board                   = esp8266_1M
+board_build.ldscript    = eagle.flash.1m128.ld
+board_build.filesystem  = littlefs
 
-; offload with 1M LittleFS partition for plugs with 2M esp8266
+; offload with 1mb LittleFS partition for plugs with 2mb esp8266
 [env:offload-2m1m]
-build_flags            = ${common.build_flags} -DUSE_OFFLOAD_WEB
-board                  = esp8266_2M1M
-board_build.ldscript   = eagle.flash.2m1m.ld
-board_build.filesystem = littlefs
+build_flags             = ${common.build_flags} -DUSE_OFFLOAD_WEB -DUSE_SENSOR -DBUILD_2M1M
+board                   = esp8266_2M1M
+board_build.ldscript    = eagle.flash.2m1m.ld
+board_build.filesystem  = littlefs
 
 ; default french pilotwire for devices with 1M esp8266 (sonoff basic, ...)
 [env:pilotwire]
-build_flags            = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_REMOTE_SENSOR
+build_flags             = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_SENSOR
 
-; french pilotwire with 128k LittleFS partition for devices with 1M esp8266 (sonoff basic, ...)
+; french pilotwire with 64k LittleFS partition for devices with 1mb esp8266 (sonoff basic, ...)
+[env:pilotwire-1m64k]
+build_flags             = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_SENSOR -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE -DBUILD_1M64K
+board                   = esp8266_1M
+board_build.ldscript    = eagle.flash.1m64.ld
+board_build.filesystem  = littlefs
+
+; french pilotwire with 128k LittleFS partition for devices with 1mb esp8266 (sonoff basic, ...)
 [env:pilotwire-1m128k]
-build_flags            = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_REMOTE_SENSOR -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE
-board                  = esp8266_1M
-board_build.ldscript   = eagle.flash.1m128.ld
-board_build.filesystem = littlefs
+build_flags             = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_SENSOR -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE -DBUILD_1M128K
+board                   = esp8266_1M
+board_build.ldscript    = eagle.flash.1m128.ld
+board_build.filesystem  = littlefs
 
+; french pilotwire with 1mb LittleFS partition for plugs with 2mb esp8266
+[env:pilotwire-2m1m]
+build_flags             = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_SENSOR -DBUILD_2M1M
+board                   = esp8266_2M1M
+board_build.ldscript    = eagle.flash.2m1m.ld
+board_build.filesystem  = littlefs
+
+; french pilotwire with 2mb LittleFS partition for devices with 4mb esp8266 (wemos mini, ...)
 [env:pilotwire-4m2m]
-build_flags            = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_REMOTE_SENSOR
-board                  = esp8266_4M2M
-board_build.ldscript   = eagle.flash.4m2m.ld
-board_build.filesystem = littlefs
+build_flags             = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_SENSOR -DBUILD_4M2M
+board                   = esp8266_4M2M
+board_build.ldscript    = eagle.flash.4m2m.ld
+board_build.filesystem  = littlefs
 
 [platformio]
 ; For best Gitpod performance remove the ";" in the next line. Needed Platformio files are cached and installed at first run
@@ -52,10 +74,13 @@ extra_configs           = platformio_tasmota_cenv.ini
 default_envs            =
 ; *** Uncomment the line(s) below to select version(s)
                            offload
-                           offload-1m128k
+                           offload-1m64k
+;                           offload-1m128k
                            offload-2m1m
                            pilotwire
-                           pilotwire-1m128k
+                           pilotwire-1m64k
+;                           pilotwire-1m128k
+                           pilotwire-2m1m
                            pilotwire-4m2m
 ;                          tasmota
 ;                          tasmota-debug
