--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -37,10 +37,10 @@ extra_configs = platformio_tasmota_cenv.ini
 ; *** Build/upload environment
 default_envs =
 ; *** Uncomment the line(s) below to select version(s)
-;                teleinfo
-                teleinfo-4m2m
-                teleinfo-16m14m
-                teleinfo32
+    teleinfo
+    teleinfo-4m2m
+    teleinfo-16m14m
+    teleinfo32
 
 [env]
 ; Activate Development core by removing ";" the next lines
