--- a/offload-pilotwire/platformio_override.ini
+++ b/offload-pilotwire/platformio_override.ini
@@ -10,105 +10,102 @@
 
 ; default offload for plugs with 1M esp8266
 [env:offload]
-build_flags             = ${common.build_flags} -DUSE_OFFLOAD_WEB -DUSE_SENSOR
+build_flags             = ${common.build_flags} -DUSE_OFFLOAD_WEB
 
 ; offload with 64k LittleFS partition for plugs with 1M esp8266
 [env:offload-1m64k]
-build_flags             = ${common.build_flags} -DUSE_OFFLOAD_WEB -DUSE_SENSOR -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE -DBUILD_1M64K
+build_flags             = ${common.build_flags} -DBUILD_1M64K -DUSE_OFFLOAD_WEB -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE
 board                   = esp8266_1M
 board_build.ldscript    = eagle.flash.1m64.ld
 board_build.filesystem  = littlefs
 
 ; offload with 128k LittleFS partition for plugs with 1M esp8266
 [env:offload-1m128k]
-build_flags             = ${common.build_flags} -DUSE_OFFLOAD_WEB -DUSE_SENSOR -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE -DBUILD_1M128K
+build_flags             = ${common.build_flags} -DBUILD_1M128K -DUSE_OFFLOAD_WEB -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE
 board                   = esp8266_1M
 board_build.ldscript    = eagle.flash.1m128.ld
 board_build.filesystem  = littlefs
 
 ; offload with 1mb LittleFS partition for plugs with 2mb esp8266
 [env:offload-2m1m]
-build_flags             = ${common.build_flags} -DUSE_OFFLOAD_WEB -DUSE_SENSOR -DBUILD_2M1M
+build_flags             = ${common.build_flags} -DBUILD_2M1M -DUSE_OFFLOAD_WEB 
 board                   = esp8266_2M1M
 board_build.ldscript    = eagle.flash.2m1m.ld
 board_build.filesystem  = littlefs
 
 ; default french pilotwire for devices with 1M esp8266 (sonoff basic, ...)
 [env:pilotwire]
-build_flags             = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_SENSOR
+build_flags             = ${common.build_flags} -DUSE_PILOTWIRE
 
 ; french pilotwire with 64k LittleFS partition for devices with 1mb esp8266 (sonoff basic, ...)
 [env:pilotwire-1m64k]
-build_flags             = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_SENSOR -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE -DBUILD_1M64K
+build_flags             = ${common.build_flags} -DBUILD_1M64K -DUSE_PILOTWIRE -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE 
 board                   = esp8266_1M
 board_build.ldscript    = eagle.flash.1m64.ld
 board_build.filesystem  = littlefs
 
 ; french pilotwire with 128k LittleFS partition for devices with 1mb esp8266 (sonoff basic, ...)
 [env:pilotwire-1m128k]
-build_flags             = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_SENSOR -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE -DBUILD_1M128K
+build_flags             = ${common.build_flags} -DBUILD_1M128K -DUSE_PILOTWIRE -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE 
 board                   = esp8266_1M
 board_build.ldscript    = eagle.flash.1m128.ld
 board_build.filesystem  = littlefs
 
 ; french pilotwire with 1mb LittleFS partition for plugs with 2mb esp8266
 [env:pilotwire-2m1m]
-build_flags             = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_SENSOR -DBUILD_2M1M
+build_flags             = ${common.build_flags} -DBUILD_2M1M -DUSE_PILOTWIRE 
 board                   = esp8266_2M1M
 board_build.ldscript    = eagle.flash.2m1m.ld
 board_build.filesystem  = littlefs
 
 ; french pilotwire with 2mb LittleFS partition for devices with 4mb esp8266 (wemos mini, ...)
 [env:pilotwire-4m2m]
-build_flags             = ${common.build_flags} -DUSE_PILOTWIRE -DUSE_SENSOR -DBUILD_4M2M
+build_flags             = ${common.build_flags} -DBUILD_4M2M -DUSE_PILOTWIRE 
 board                   = esp8266_4M2M
 board_build.ldscript    = eagle.flash.4m2m.ld
 board_build.filesystem  = littlefs
 
+[env:pilotwire32]
+extends                = env:tasmota32_base 
+build_flags            = ${esp32_defaults.build_flags} -DBUILD_ESP32_4M -DUSE_PILOTWIRE 
+board                  = esp32_4M_FS
+board_build.filesystem = littlefs
+
 [platformio]
 ; For best Gitpod performance remove the ";" in the next line. Needed Platformio files are cached and installed at first run
 ;core_dir = .platformio
-extra_configs           = platformio_tasmota_cenv.ini
+; For unrelated compile errors with Windows it can help to shorten Platformio project path
+;workspace_dir = c:\.pio
 
 ; *** Build/upload environment
 default_envs            =
 ; *** Uncomment the line(s) below to select version(s)
                            offload
                            offload-1m64k
-;                           offload-1m128k
+                           offload-1m128k
                            offload-2m1m
                            pilotwire
                            pilotwire-1m64k
-;                           pilotwire-1m128k
+                           pilotwire-1m128k
                            pilotwire-2m1m
                            pilotwire-4m2m
-;                          tasmota
-;                          tasmota-debug
-;                          tasmota-minimal
-;                          tasmota-lite
-;                          tasmota-knx
-;                          tasmota-sensors
-;                          tasmota-display
-;                          tasmota-zbbridge
-;                          tasmota-ir
-;                          tasmota32
-;                          tasmota32-bluetooth
-;                          tasmota32-webcam
-;                          tasmota32-knx
-;                          tasmota32-sensors
-;                          tasmota32-display
-;                          tasmota32-ir
-;                          tasmota32solo1
-;                          tasmota32c3
-;                          tasmota32s2
-;                          tasmota32-odroidgo
-;                          tasmota32-core2
-
+                           pilotwire32
 
 [env]
-framework               = ${common.framework}
-platform                = ${common.platform}
-platform_packages       = ${common.platform_packages}
+; Activate Development core by removing ";" the next lines
+;platform                = https://github.com/platformio/platform-espressif8266.git
+;platform_packages       = framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
+;                          mcspr/toolchain-xtensa @ ~5.100300.211127
+;                          platformio/tool-esptoolpy @ ~1.30300
+;build_unflags           = ${common.build_unflags}
+;                          -Wswitch-unreachable
+;build_flags             = ${common.build_flags}
+;                          -D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM48_SECHEAP_SHARED
+;                          -Wno-switch-unreachable
+; *** Optional Debug messages
+;                         -DDEBUG_TASMOTA_CORE
+;                         -DDEBUG_TASMOTA_DRIVER
+;                         -DDEBUG_TASMOTA_SENSOR
 ; Build variant 1MB = 1MB firmware no filesystem (default)
 board                   = ${common.board}
 ; Build variant 2MB = 1MB firmware, 1MB filesystem (most Shelly devices)
@@ -117,22 +114,11 @@ board                   = ${common.board}
 ;board                   = esp8266_4M2M
 ;board_build.f_cpu       = 160000000L
 ;board_build.f_flash     = 40000000L
-board_build.filesystem  = ${common.board_build.filesystem}
-build_unflags           = ${common.build_unflags}
-build_flags             = ${common.build_flags}
-; *** Optional Debug messages
-;                         -DDEBUG_TASMOTA_CORE
-;                         -DDEBUG_TASMOTA_DRIVER
-;                         -DDEBUG_TASMOTA_SENSOR
-monitor_speed           = ${common.monitor_speed}
+;monitor_speed           = 115200
 ; *** Serial port used for erasing/flashing the ESP82xx
-;upload_port             = ${common.upload_port}
-upload_port             = COM5
-upload_resetmethod      = ${common.upload_resetmethod}
-extra_scripts           = ${scripts_defaults.extra_scripts}
+;upload_port             = COM5
+extra_scripts           = ${esp_defaults.extra_scripts}
 ;                          pio-tools/obj-dump.py
-lib_ldf_mode            = ${common.lib_ldf_mode}
-lib_compat_mode         = ${common.lib_compat_mode}
 lib_ignore              =
                           Servo(esp8266)
                           ESP8266AVRISP
@@ -154,11 +140,14 @@ lib_extra_dirs          = ${library.lib_extra_dirs}
 
 
 [env:tasmota32_base]
-framework               = ${common.framework}
-platform                = ${core32.platform}
-platform_packages       = ${core32.platform_packages}
-; Build variant ESP32 4M Flash, Tasmota 1856k Code/OTA, 320k LITTLEFS (default)
-board                   = esp32_4M
+; *** Uncomment next lines ";" to enable development Tasmota Arduino version ESP32
+;platform                = https://github.com/tasmota/platform-espressif32/releases/download/v.2.0.3/platform-espressif32-v.2.0.3.zip
+;platform_packages       = framework-arduinoespressif32 @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/847/framework-arduinoespressif32-v4.4_dev-d327997163.tar.gz
+build_unflags           = ${esp32_defaults.build_unflags}
+build_flags             = ${esp32_defaults.build_flags}
+
+; Build variant ESP32 4M Flash, Tasmota 1856k Code/OTA, 1344k LITTLEFS (default)
+;board                   = esp32_4M
 ; Build variant ESP32 8M Flash, Tasmota 2944k Code/OTA, 2112k LITTLEFS
 ;board                   = esp32_8M
 ; Build variant ESP32 16M Flash, Tasmota 2944k Code/OTA, 10M LITTLEFS
@@ -171,12 +160,14 @@ monitor_speed           = 115200
 upload_port             = COM4
 ;upload_speed            = 115200
 upload_resetmethod      = ${common.upload_resetmethod}
-extra_scripts           = ${common.extra_scripts}
-build_unflags           = ${esp32_defaults.build_unflags}
-build_flags             = ${esp32_defaults.build_flags}
-lib_ldf_mode            = ${common.lib_ldf_mode}
-lib_compat_mode         = ${common.lib_compat_mode}
+extra_scripts           = ${esp32_defaults.extra_scripts}
+;                          pio-tools/obj-dump.py
 lib_ignore              =
+                          HTTPUpdateServer
+                          ESP RainMaker
+                          WiFiProv
+                          USB
+                          SPIFFS
                           ESP32 Azure IoT Arduino
                           ESP32 Async UDP
                           ESP32 BLE Arduino
@@ -195,8 +186,8 @@ lib_extra_dirs           = ${library.lib_extra_dirs}
                           lib/libesp32_lvgl
 ; *** uncomment the following line if you use Bluetooth or Apple Homekit in a Tasmota32 build. Reduces compile time
 ;                          lib/libesp32_div
-; *** uncomment the following line if you use Epaper driver epidy in your Tasmota32 build. Reduces compile time 
-;                          lib/libesp32_epdiy
+; *** uncomment the following line if you use Epaper driver epidy in your Tasmota32 build. Reduces compile time
+;                          lib/libesp32_eink
 
 
 [library]
@@ -210,11 +201,11 @@ lib_extra_dirs           =
 ; *** Only disabled for Tasmota minimal and Tasmota light. For all other variants needed!
                            lib/lib_basic
 ; **** I2C devices. Most sensors. Disable only if you dont have ANY I2C device enabled
-;                           lib/lib_i2c
+                           lib/lib_i2c
 ; *** Displays. Disable if you dont have any Display activated
-;                           lib/lib_display
+                           lib/lib_display
 ; *** Bear SSL and base64. Disable if you dont have SSL or TLS activated
-;                           lib/lib_ssl
+                           lib/lib_ssl
 ; *** Audio needs a lot of time to compile. Mostly not used functions. Recommended to disable
 ;                           lib/lib_audio
 ; *** RF 433 stuff (not RF Bridge). Recommended to disable
