--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -11,7 +11,7 @@
 [env:teleinfo]
 
 [env:teleinfo-4m2m]
-build_flags            = ${common.build_flags}  -DBUILD_4M2M -DUSE_FTPSERVER 
+build_flags            = ${common.build_flags} -DBUILD_4M2M -DUSE_FTPSERVER 
 board                  = esp8266_4M2M
 board_build.ldscript   = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
@@ -23,9 +23,15 @@ board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
 
 [env:teleinfo32]
-extends                = env:tasmota32_base 
-build_flags            = ${esp32_defaults.build_flags} -DBUILD_ESP32_4M -DUSE_ETHERNET -DUSE_FTPSERVER
-board                  = esp32_4M_FS
+extends                = env:tasmota32 
+build_flags            = ${env:tasmota32_base.build_flags} -DFIRMWARE_TASMOTA32 -DBUILD_ESP32_4M -DUSE_FTPSERVER -DUSE_ETHERNET
+board                  = esp32_4M
+board_build.filesystem = littlefs
+
+[env:teleinfo32s2] 
+extends                = env:tasmota32s2
+build_flags            = ${env:tasmota32_base.build_flags} -DFIRMWARE_TASMOTA32 -DBUILD_ESP32S2 -DUSE_FTPSERVER
+board                  = esp32s2
 board_build.filesystem = littlefs
 
 [platformio]
@@ -37,10 +43,13 @@ extra_configs = platformio_tasmota_cenv.ini
 ; *** Build/upload environment
 default_envs =
 ; *** Uncomment the line(s) below to select version(s)
+    tasmota32-safeboot
+    tasmota32s2-safeboot
     teleinfo
     teleinfo-4m2m
     teleinfo-16m14m
     teleinfo32
+    teleinfo32s2
 
 [env]
 ; Activate Development core by removing ";" the next lines
