--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -43,7 +43,7 @@ extra_configs = platformio_tasmota_cenv.ini
 ; *** Build/upload environment
 default_envs =
 ; *** Uncomment the line(s) below to select version(s)
-    tasmota32-safeboot
+    tasmota32
     tasmota32s2-safeboot
     teleinfo
     teleinfo-4m2m
