--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -24,7 +24,7 @@ board_build.filesystem = littlefs
 
 [env:teleinfo32]
 extends                = env:tasmota32 
-build_flags            = ${env:tasmota32_base.build_flags} -DFIRMWARE_TASMOTA32 -DBUILD_ESP32_4M -DUSE_FTPSERVER -DUSE_ETHERNET
+build_flags            = ${env:tasmota32_base.build_flags} -DFIRMWARE_TASMOTA32 -DBUILD_ESP32_4M -DUSE_FTPSERVER
 board                  = esp32_4M
 board_build.filesystem = littlefs
 
