--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -43,13 +43,13 @@ extra_configs = platformio_tasmota_cenv.ini
 ; *** Build/upload environment
 default_envs =
 ; *** Uncomment the line(s) below to select version(s)
-    tasmota32
-    tasmota32s2-safeboot
-    teleinfo
-    teleinfo-4m2m
-    teleinfo-16m14m
+;    tasmota32
+;    tasmota32s2-safeboot
+;    teleinfo
+;    teleinfo-4m2m
+;    teleinfo-16m14m
     teleinfo32
-    teleinfo32s2
+;    teleinfo32s2
 
 [env]
 ; Activate Development core by removing ";" the next lines
