--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -24,13 +24,13 @@ board_build.filesystem = littlefs
 
 [env:teleinfo32]
 extends                = env:tasmota32 
-build_flags            = ${env:tasmota32_base.build_flags} -DFIRMWARE_TASMOTA32 -DBUILD_ESP32_4M -DUSE_FTPSERVER
-board                  = esp32_4M
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_FTPSERVER -DUSE_ETHERNET
+board                  = esp32_4M_FS
 board_build.filesystem = littlefs
 
 [env:teleinfo32s2] 
 extends                = env:tasmota32s2
-build_flags            = ${env:tasmota32_base.build_flags} -DFIRMWARE_TASMOTA32 -DBUILD_ESP32S2 -DUSE_FTPSERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_FTPSERVER
 board                  = esp32s2
 board_build.filesystem = littlefs
 
@@ -43,13 +43,11 @@ extra_configs = platformio_tasmota_cenv.ini
 ; *** Build/upload environment
 default_envs =
 ; *** Uncomment the line(s) below to select version(s)
-;    tasmota32
-;    tasmota32s2-safeboot
-;    teleinfo
-;    teleinfo-4m2m
-;    teleinfo-16m14m
+    teleinfo
+    teleinfo-4m2m
+    teleinfo-16m14m
     teleinfo32
-;    teleinfo32s2
+    teleinfo32s2
 
 [env]
 ; Activate Development core by removing ";" the next lines
@@ -143,7 +141,7 @@ lib_extra_dirs           = ${library.lib_extra_dirs}
 ; *** ESP32 lib. ALWAYS needed for ESP32 !!!
                           lib/libesp32
 ; *** comment the following line if you dont use LVGL in a Tasmota32 build. Reduces compile time
-                          lib/libesp32_lvgl
+;                          lib/libesp32_lvgl
 ; *** uncomment the following line if you use Bluetooth or Apple Homekit in a Tasmota32 build. Reduces compile time
 ;                          lib/libesp32_div
 ; *** uncomment the following line if you use Epaper driver epidy in your Tasmota32 build. Reduces compile time
@@ -162,7 +160,7 @@ lib_extra_dirs           =
 ; **** I2C devices. Most sensors. Disable only if you dont have ANY I2C device enabled
                            lib/lib_i2c
 ; *** Displays. Disable if you dont have any Display activated
-                           lib/lib_display
+;                           lib/lib_display
 ; *** Bear SSL and base64. Disable if you dont have SSL or TLS activated
                            lib/lib_ssl
 ; *** Audio needs a lot of time to compile. Mostly not used functions. Recommended to disable
@@ -170,4 +168,4 @@ lib_extra_dirs           =
 ; *** RF 433 stuff (not RF Bridge). Recommended to disable
                            lib/lib_rf
 ; *** Mostly not used functions. Recommended to disable
-                           lib/lib_div
+;                           lib/lib_div
