--- a/offload-pilotwire/platformio_override.ini
+++ b/offload-pilotwire/platformio_override.ini
@@ -19,7 +19,7 @@ board                   = esp8266_1M
 board_build.ldscript    = eagle.flash.1m64.ld
 board_build.filesystem  = littlefs
 
-; offload with 128k LittleFS partition for plugs with 1M esp8266
+; offload with 64k LittleFS partition for plugs with 1M esp8266 (avoid as you'll have to go thru tasmota-mini)
 [env:offload-1m128k]
 build_flags             = ${common.build_flags} -DBUILD_1M128K -DUSE_OFFLOAD_WEB -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE
 board                   = esp8266_1M
@@ -44,13 +44,6 @@ board                   = esp8266_1M
 board_build.ldscript    = eagle.flash.1m64.ld
 board_build.filesystem  = littlefs
 
-; french pilotwire with 128k LittleFS partition for devices with 1mb esp8266 (sonoff basic, ...)
-[env:pilotwire-1m128k]
-build_flags             = ${common.build_flags} -DBUILD_1M128K -DUSE_PILOTWIRE -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE 
-board                   = esp8266_1M
-board_build.ldscript    = eagle.flash.1m128.ld
-board_build.filesystem  = littlefs
-
 ; french pilotwire with 1mb LittleFS partition for plugs with 2mb esp8266
 [env:pilotwire-2m1m]
 build_flags             = ${common.build_flags} -DBUILD_2M1M -DUSE_PILOTWIRE 
@@ -67,8 +60,14 @@ board_build.filesystem  = littlefs
 
 [env:pilotwire32]
 extends                = env:tasmota32_base 
-build_flags            = ${esp32_defaults.build_flags} -DBUILD_ESP32_4M -DUSE_PILOTWIRE 
+build_flags            = ${esp32_defaults.build_flags} -DBUILD_ESP32 -DUSE_PILOTWIRE 
 board                  = esp32_4M_FS
+board_build.filesystem = littlefs
+
+[env:pilotwire32s2] 
+extends                = env:tasmota32s2
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_PILOTWIRE
+board                  = esp32s2
 board_build.filesystem = littlefs
 
 [platformio]
@@ -86,10 +85,10 @@ default_envs            =
                            offload-2m1m
                            pilotwire
                            pilotwire-1m64k
-                           pilotwire-1m128k
                            pilotwire-2m1m
                            pilotwire-4m2m
                            pilotwire32
+                           pilotwire32s2
 
 [env]
 ; Activate Development core by removing ";" the next lines
@@ -183,7 +182,7 @@ lib_extra_dirs           = ${library.lib_extra_dirs}
 ; *** ESP32 lib. ALWAYS needed for ESP32 !!!
                           lib/libesp32
 ; *** comment the following line if you dont use LVGL in a Tasmota32 build. Reduces compile time
-                          lib/libesp32_lvgl
+;                          lib/libesp32_lvgl
 ; *** uncomment the following line if you use Bluetooth or Apple Homekit in a Tasmota32 build. Reduces compile time
 ;                          lib/libesp32_div
 ; *** uncomment the following line if you use Epaper driver epidy in your Tasmota32 build. Reduces compile time
@@ -203,7 +202,7 @@ lib_extra_dirs           =
 ; **** I2C devices. Most sensors. Disable only if you dont have ANY I2C device enabled
                            lib/lib_i2c
 ; *** Displays. Disable if you dont have any Display activated
-                           lib/lib_display
+;                           lib/lib_display
 ; *** Bear SSL and base64. Disable if you dont have SSL or TLS activated
                            lib/lib_ssl
 ; *** Audio needs a lot of time to compile. Mostly not used functions. Recommended to disable
