--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -166,6 +166,6 @@ lib_extra_dirs           =
 ; *** Audio needs a lot of time to compile. Mostly not used functions. Recommended to disable
 ;                           lib/lib_audio
 ; *** RF 433 stuff (not RF Bridge). Recommended to disable
-                           lib/lib_rf
+;                           lib/lib_rf
 ; *** Mostly not used functions. Recommended to disable
 ;                           lib/lib_div
