--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -8,27 +8,27 @@
 ; Please visit documentation for the options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
-[env:teleinfo]
+[env:tasmota-teleinfo]
 
-[env:teleinfo-4m2m]
+[env:tasmota-teleinfo-4m2m]
 build_flags            = ${common.build_flags} -DBUILD_4M2M -DUSE_FTPSERVER 
 board                  = esp8266_4M2M
 board_build.ldscript   = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
 
-[env:teleinfo-16m14m]
+[env:tasmota-teleinfo-16m14m]
 build_flags            = ${common.build_flags} -DBUILD_16M14M -DUSE_FTPSERVER 
 board                  = esp8266_16M14M
 board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
 
-[env:teleinfo32]
+[env:tasmota32-teleinfo]
 extends                = env:tasmota32 
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_FTPSERVER -DUSE_ETHERNET
 board                  = esp32_4M_FS
 board_build.filesystem = littlefs
 
-[env:teleinfo32s2] 
+[env:tasmota32s2-teleinfo] 
 extends                = env:tasmota32s2
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_FTPSERVER
 board                  = esp32s2
@@ -43,11 +43,11 @@ extra_configs = platformio_tasmota_cenv.ini
 ; *** Build/upload environment
 default_envs =
 ; *** Uncomment the line(s) below to select version(s)
-    teleinfo
-    teleinfo-4m2m
-    teleinfo-16m14m
-    teleinfo32
-    teleinfo32s2
+    tasmota-teleinfo
+    tasmota-teleinfo-4m2m
+    tasmota-teleinfo-16m14m
+    tasmota32-teleinfo
+    tasmota32s2-teleinfo
 
 [env]
 ; Activate Development core by removing ";" the next lines
