--- a/ecowatt/platformio_override.ini
+++ b/ecowatt/platformio_override.ini
@@ -8,13 +8,13 @@
 ; Please visit documentation for the options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
-[env:ecowatt32]
+[env:tasmota32-ecowatt]
 extends                = env:tasmota32 
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M
 board                  = esp32_4M_FS
 board_build.filesystem = littlefs
 
-[env:ecowatt32s2] 
+[env:tasmota32s2-ecowatt] 
 extends                = env:tasmota32s2
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2
 board                  = esp32s2
@@ -29,8 +29,8 @@ extra_configs = platformio_tasmota_cenv.ini
 ; *** Build/upload environment
 default_envs =
 ; *** Uncomment the line(s) below to select version(s)
-    ecowatt32
-    ecowatt32s2
+    tasmota32-ecowatt
+    tasmota32s2-ecowatt
 
 [env]
 ; Activate Development core by removing ";" the next lines
