--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -34,6 +34,12 @@ build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE
 board                  = esp32s2
 board_build.filesystem = littlefs
 
+[env:tasmota32s3-teleinfo] 
+extends                = env:tasmota32s3
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3 -DUSE_FTPSERVER
+board                  = esp32s3cdc_LilyTDisp
+board_build.filesystem = littlefs
+
 [platformio]
 ; For best Gitpod performance remove the ";" in the next line. Needed Platformio files are cached and installed at first run
 ;core_dir = .platformio
@@ -48,6 +54,7 @@ default_envs =
     tasmota-teleinfo-16m14m
     tasmota32-teleinfo
     tasmota32s2-teleinfo
+    tasmota32s3-teleinfo
 
 [env]
 ; Activate Development core by removing ";" the next lines
