--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -34,9 +34,9 @@ build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE
 board                  = esp32s2
 board_build.filesystem = littlefs
 
-[env:tasmota32s3-teleinfo] 
+[env:tasmota32s3-teleinfo-16m10m] 
 extends                = env:tasmota32s3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3 -DUSE_FTPSERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_FTPSERVER
 board                  = esp32s3cdc_LilyTDisp
 board_build.filesystem = littlefs
 
@@ -49,12 +49,12 @@ extra_configs = platformio_tasmota_cenv.ini
 ; *** Build/upload environment
 default_envs =
 ; *** Uncomment the line(s) below to select version(s)
-    tasmota-teleinfo
-    tasmota-teleinfo-4m2m
-    tasmota-teleinfo-16m14m
-    tasmota32-teleinfo
-    tasmota32s2-teleinfo
-    tasmota32s3-teleinfo
+;    tasmota-teleinfo
+;    tasmota-teleinfo-4m2m
+;    tasmota-teleinfo-16m14m
+;    tasmota32-teleinfo
+;    tasmota32s2-teleinfo
+    tasmota32s3-teleinfo-16m10m
 
 [env]
 ; Activate Development core by removing ";" the next lines
