--- a/ecowatt/platformio_override.ini
+++ b/ecowatt/platformio_override.ini
@@ -13,12 +13,14 @@ extends                = env:tasmota32
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M
 board                  = esp32_4M_FS
 board_build.filesystem = littlefs
+board_build.f_cpu      = 240000000L
 
 [env:tasmota32s2-ecowatt] 
 extends                = env:tasmota32s2
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2
 board                  = esp32s2
 board_build.filesystem = littlefs
+board_build.f_cpu      = 240000000L
 
 [platformio]
 ; For best Gitpod performance remove the ";" in the next line. Needed Platformio files are cached and installed at first run
