--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -15,18 +15,21 @@ build_flags            = ${common.build_flags} -DBUILD_4M2M -DUSE_FTPSERVER
 board                  = esp8266_4M2M
 board_build.ldscript   = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
+board_build.f_cpu      = 160000000L
 
 [env:tasmota-teleinfo-16m14m]
 build_flags            = ${common.build_flags} -DBUILD_16M14M -DUSE_FTPSERVER 
 board                  = esp8266_16M14M
 board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
+board_build.f_cpu      = 160000000L
 
 [env:tasmota32-teleinfo]
 extends                = env:tasmota32 
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_FTPSERVER -DUSE_ETHERNET
 board                  = esp32_4M_FS
 board_build.filesystem = littlefs
+board_build.f_cpu      = 240000000L
 
 [env:tasmota32s2-teleinfo] 
 extends                = env:tasmota32s2
@@ -37,7 +40,7 @@ board_build.filesystem = littlefs
 [env:tasmota32s3-teleinfo-16m10m] 
 extends                = env:tasmota32s3
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_FTPSERVER
-board                  = esp32s3cdc_LilyTDisp
+board                  = esp32s3_lillygo_t7s3
 board_build.filesystem = littlefs
 
 [platformio]
@@ -49,11 +52,11 @@ extra_configs = platformio_tasmota_cenv.ini
 ; *** Build/upload environment
 default_envs =
 ; *** Uncomment the line(s) below to select version(s)
-;    tasmota-teleinfo
-;    tasmota-teleinfo-4m2m
-;    tasmota-teleinfo-16m14m
-;    tasmota32-teleinfo
-;    tasmota32s2-teleinfo
+    tasmota-teleinfo
+    tasmota-teleinfo-4m2m
+    tasmota-teleinfo-16m14m
+    tasmota32-teleinfo
+    tasmota32s2-teleinfo
     tasmota32s3-teleinfo-16m10m
 
 [env]
