--- a/vmc/platformio_override.ini
+++ b/vmc/platformio_override.ini
@@ -9,18 +9,18 @@
 ; http://docs.platformio.org/en/stable/projectconf.html
 
 ; VMC for devices with 1M esp8266 (sonoff basic, ...)
-[env:vmc]
+[env:tasmota-vmc]
 build_flags            = ${common.build_flags}
 
 ; VMC with 64k LittleFS partition for devices with 1mb esp8266 (sonoff basic, ...)
-[env:vmc-1m64k]
+[env:tasmota-vmc-1m64k]
 build_flags            = ${common.build_flags} -DBUILD_1M64K -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE
 board                  = esp8266_1M
 board_build.ldscript   = eagle.flash.1m64.ld
 board_build.filesystem = littlefs
 
 ; VMC with 2mb LittleFS partition for devices with 4mb esp8266 (wemos mini, ...)
-[env:vmc-4m2m]
+[env:tasmota-vmc-4m2m]
 build_flags            = ${common.build_flags} -DBUILD_4M2M 
 board                  = esp8266_4M2M
 board_build.ldscript   = eagle.flash.4m2m.ld
@@ -34,9 +34,9 @@ extra_configs           = platformio_tasmota_cenv.ini
 ; *** Build/upload environment
 default_envs            =
 ; *** Uncomment the line(s) below to select version(s)
-                           vmc
-                           vmc-1m64k
-                           vmc-4m2m
+                           tasmota-vmc
+                           tasmota-vmc-1m64k
+                           tasmota-vmc-4m2m
 
 [env]
 framework               = ${common.framework}
