--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -11,36 +11,36 @@
 [env:tasmota-teleinfo]
 
 [env:tasmota-teleinfo-4m2m]
-build_flags            = ${common.build_flags} -DBUILD_4M2M -DUSE_FTPSERVER 
+build_flags            = ${common.build_flags} -DBUILD_4M2M
 board                  = esp8266_4M2M
 board_build.ldscript   = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
-board_build.f_cpu      = 240000000L
+board_build.f_cpu      = 160000000L
 
 [env:tasmota-teleinfo-16m14m]
-build_flags            = ${common.build_flags} -DBUILD_16M14M -DUSE_FTPSERVER 
+build_flags            = ${common.build_flags} -DBUILD_16M14M
 board                  = esp8266_16M14M
 board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
-board_build.f_cpu      = 240000000L
+board_build.f_cpu      = 160000000L
 
 [env:tasmota32-teleinfo]
 extends                = env:tasmota32 
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_FTPSERVER -DUSE_ETHERNET
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_ETHERNET
 board                  = esp32_4M_FS
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s2-teleinfo] 
 extends                = env:tasmota32s2
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_FTPSERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2
 board                  = esp32s2
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s3-teleinfo-16m10m] 
 extends                = env:tasmota32s3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_FTPSERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M
 board                  = esp32s3_lillygo_t7s3
 board_build.filesystem = littlefs
 
@@ -54,11 +54,11 @@ extra_configs = platformio_tasmota_cenv.ini
 default_envs =
 ; *** Uncomment the line(s) below to select version(s)
     tasmota-teleinfo
-    tasmota-teleinfo-4m2m
-    tasmota-teleinfo-16m14m
-    tasmota32-teleinfo
-    tasmota32s2-teleinfo
-    tasmota32s3-teleinfo-16m10m
+;    tasmota-teleinfo-4m2m
+;    tasmota-teleinfo-16m14m
+;    tasmota32-teleinfo
+;    tasmota32s2-teleinfo
+;    tasmota32s3-teleinfo-16m10m
 
 [env]
 ; Activate Development core by removing ";" the next lines
