--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -47,47 +47,69 @@ board_build.filesystem = littlefs
 [platformio]
 ; For best Gitpod performance remove the ";" in the next line. Needed Platformio files are cached and installed at first run
 ;core_dir = .platformio
-; Custom config Zigbee [env] -> platformio_tasmota_cenv_example.ini
-extra_configs = platformio_tasmota_cenv.ini
+; For unrelated compile errors with Windows it can help to shorten Platformio project path
+;workspace_dir = c:\.pio
+;extra_configs           = platformio_tasmota_user_env.ini
 
 ; *** Build/upload environment
-default_envs =
+default_envs            =
 ; *** Uncomment the line(s) below to select version(s)
     tasmota-teleinfo
-;    tasmota-teleinfo-4m2m
-;    tasmota-teleinfo-16m14m
-;    tasmota32-teleinfo
-;    tasmota32s2-teleinfo
-;    tasmota32s3-teleinfo-16m10m
+    tasmota-teleinfo-4m2m
+    tasmota-teleinfo-16m14m
+    tasmota32-teleinfo
+    tasmota32s2-teleinfo
+    tasmota32s3-teleinfo-16m10m
+
+;                          tasmota
+;                          tasmota-debug
+;                          tasmota-minimal
+;                          tasmota-lite
+;                          tasmota-knx
+;                          tasmota-sensors
+;                          tasmota-display
+;                          tasmota-zbbridge
+;                          tasmota-ir
+;                          tasmota32
+;                          tasmota32-zbbrdgpro
+;                          tasmota32-bluetooth
+;                          tasmota32-webcam
+;                          tasmota32-knx
+;                          tasmota32-lvgl
+;                          tasmota32-ir
+;                          tasmota32solo1
+;                          tasmota32c3
+;                          tasmota32c3cdc
+;                          tasmota32s2
+;                          tasmota32s2cdc
+;                          tasmota32s3
+;                          tasmota32s3cdc
+;                          tasmota32-odroidgo
+;                          tasmota32-core2
+;                          tasmota32-nspanel
+
 
 [env]
-; Activate Development core by removing ";" the next lines
-;platform                = https://github.com/platformio/platform-espressif8266.git
-;platform_packages       = framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
-;                          mcspr/toolchain-xtensa @ ~5.100300.211127
-;                          platformio/tool-esptoolpy @ ~1.30300
 ;build_unflags           = ${common.build_unflags}
 ;                          -Wswitch-unreachable
 ;build_flags             = ${common.build_flags}
-;                          -D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM48_SECHEAP_SHARED
+;                          -DF_CRYSTAL=26000000
 ;                          -Wno-switch-unreachable
 ; *** Optional Debug messages
 ;                         -DDEBUG_TASMOTA_CORE
 ;                         -DDEBUG_TASMOTA_DRIVER
 ;                         -DDEBUG_TASMOTA_SENSOR
 ; Build variant 1MB = 1MB firmware no filesystem (default)
-board                   = ${common.board}
+;board                   = ${common.board}
 ; Build variant 2MB = 1MB firmware, 1MB filesystem (most Shelly devices)
 ;board                   = esp8266_2M1M
 ; Build variant 4MB = 1MB firmware, 1MB OTA, 2MB filesystem (WEMOS D1 Mini, NodeMCU, Sonoff POW)
 ;board                   = esp8266_4M2M
 ;board_build.f_cpu       = 160000000L
 ;board_build.f_flash     = 40000000L
-;monitor_speed           = 115200
-; *** Serial port used for erasing/flashing the ESP82xx
-;upload_port             = COM5
-extra_scripts           = ${esp_defaults.extra_scripts}
-;                          pio-tools/obj-dump.py
+; *** Define serial port used for erasing/flashing/terminal
+;upload_port             = COM4
+;monitor_port            = COM4
 lib_ignore              =
                           Servo(esp8266)
                           ESP8266AVRISP
@@ -110,27 +132,26 @@ lib_extra_dirs          = ${library.lib_extra_dirs}
 
 [env:tasmota32_base]
 ; *** Uncomment next lines ";" to enable development Tasmota Arduino version ESP32
-;platform                = https://github.com/tasmota/platform-espressif32/releases/download/v.2.0.3/platform-espressif32-v.2.0.3.zip
-;platform_packages       = framework-arduinoespressif32 @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/847/framework-arduinoespressif32-v4.4_dev-d327997163.tar.gz
-build_unflags           = ${esp32_defaults.build_unflags}
-build_flags             = ${esp32_defaults.build_flags}
-
-; Build variant ESP32 4M Flash, Tasmota 1856k Code/OTA, 1344k LITTLEFS (default)
-;board                   = esp32_4M
-; Build variant ESP32 8M Flash, Tasmota 2944k Code/OTA, 2112k LITTLEFS
-;board                   = esp32_8M
-; Build variant ESP32 16M Flash, Tasmota 2944k Code/OTA, 10M LITTLEFS
-;board                   = esp32_16M
+;platform                = https://github.com/tasmota/platform-espressif32.git
+;platform_packages       = framework-arduinoespressif32 @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/1271/framework-arduinoespressif32-lwip_timeout-ed6742e7f0.zip
+;                          framework-arduino-solo1 @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/1273/framework-arduinoespressif32-solo1-release_v4.4-804d12ce82.zip
+;                          framework-arduino-ITEAD @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/1272/framework-arduinoespressif32-ITEAD-release_v4.4-804d12ce82.zip
+;build_unflags           = ${esp32_defaults.build_unflags}
+;build_flags             = ${esp32_defaults.build_flags}
+;board                   = esp32
 ;board_build.f_cpu       = 240000000L
 ;board_build.f_flash     = 40000000L
-monitor_speed           = 115200
+;board_build.flash_mode  = qio
+;board_build.flash_size  = 8MB
+;board_upload.maximum_size = 8388608
+;board_upload.arduino.flash_extra_images =
+;board_build.partitions  = partitions/esp32_partition_app2944k_fs2M.csv
 ; *** Serial port used for erasing/flashing the ESP32
-;upload_port             = ${common.upload_port}
-upload_port             = COM4
+;upload_port             = COM4
+;monitor_port            = COM4
 ;upload_speed            = 115200
+monitor_speed           = 115200
 upload_resetmethod      = ${common.upload_resetmethod}
-extra_scripts           = ${esp32_defaults.extra_scripts}
-;                          pio-tools/obj-dump.py
 lib_ignore              =
                           HTTPUpdateServer
                           ESP RainMaker
@@ -153,10 +174,13 @@ lib_extra_dirs           = ${library.lib_extra_dirs}
                           lib/libesp32
 ; *** comment the following line if you dont use LVGL in a Tasmota32 build. Reduces compile time
 ;                          lib/libesp32_lvgl
+; *** comment the following line if you dont use ESP32 Audio in a Tasmota32 build. Reduces compile time
+;                          lib/libesp32_audio
 ; *** uncomment the following line if you use Bluetooth or Apple Homekit in a Tasmota32 build. Reduces compile time
 ;                          lib/libesp32_div
 ; *** uncomment the following line if you use Epaper driver epidy in your Tasmota32 build. Reduces compile time
 ;                          lib/libesp32_eink
+
 
 [library]
 shared_libdeps_dir      = lib
