--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -9,6 +9,7 @@
 ; http://docs.platformio.org/en/stable/projectconf.html
 
 [env:tasmota-teleinfo]
+board_build.f_cpu      = 160000000L
 
 [env:tasmota-teleinfo-4m2m]
 build_flags            = ${common.build_flags} -DBUILD_4M2M
@@ -43,6 +44,7 @@ extends                = env:tasmota32s3
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M
 board                  = esp32s3_lillygo_t7s3
 board_build.filesystem = littlefs
+board_build.f_cpu      = 240000000L
 
 [platformio]
 ; For best Gitpod performance remove the ";" in the next line. Needed Platformio files are cached and installed at first run
